2010-02-03  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-status-to-status-datum): Don't
	rewrite `created-at' by a same name element in `retweeted_status'
	node.

2010-01-31  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-default-sentinel):
	rearranged.

	* twittering-mode.el (twittering-start-http-ssl-session): return
	the process object.
	(twittering-start-http-non-ssl-session): likewise.
	(twittering-get-tweets): likewise.

	* twittering-mode.el (twittering-process-info-alist): new variable
	for managing active process and timeline spec being retrieved by
	the process.
	(twittering-register-process): new function for registering a pair
	of process and timeline spec.
	(twittering-release-process): new function for releasing a process.
	(twittering-get-timeline-spec-from-process): new function for
	getting timeline spec retrieved by the given process.
	(twittering-http-get-default-sentinel): discard statuses if
	the retrieved spec differs from the last requested one.
	(twittering-get-and-render-timeline): register a pair of the
	requested timeline spec and process for retrieving it.

2010-01-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-fill-string): use `frame-width'
	only if no windows display the `*twittering*' buffer.

2010-01-29  Daiji Kanematsu  <daijik@gmail.com>

	* twittering-mode.el (toplevel): add `easy-menu-define' in order
	to add the menu `Twitter'.

2010-01-29  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-fill-string): Add an extra
	argument to `min' for avoiding error "Wrong number of arguments:
	min, 0".

2010-01-28  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-render-timeline): simplified by
	using `insert-before-markers' instead of `insert'. This removes
	additional movement of points for scroll-mode.

2010-01-26  Satoshi Yatagawa  <yata_github@y.hauN.org>
	